feat: 实现店铺管理功能

--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "next": "^14.0.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "sass": "^1.92.0",
     "sequelize": "^6.35.0"
   },
   "devDependencies": {
