--- a/.env.local
+++ b/.env.local
@@ -11,3 +11,25 @@ JWT_SECRET=zique-assistant-secret-key-2024
 # 应用配置
 NEXT_PUBLIC_APP_NAME=紫鹊助手平台
 NEXT_PUBLIC_API_URL=http://localhost:3000/api
+
+# 邮件服务配置
+# Gmail 配置示例
+# SMTP_HOST=smtp.gmail.com
+# SMTP_PORT=587
+# SMTP_SECURE=false
+# SMTP_USER=your-email@gmail.com
+# SMTP_PASS=your-app-password
+
+# QQ邮箱配置示例（注释掉的备选方案）
+# SMTP_HOST=smtp.qq.com
+# SMTP_PORT=587
+# SMTP_SECURE=false
+# SMTP_USER=your-email@qq.com
+# SMTP_PASS=your-authorization-code
+
+# 163邮箱配置示例（注释掉的备选方案）
+SMTP_HOST=smtp.163.com
+SMTP_PORT=465
+SMTP_SECURE=true
+SMTP_USER=laixiangran@163.com
+SMTP_PASS=lai2778033RAN
