--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@ant-design/nextjs-registry": "^1.1.0",
     "@types/bcryptjs": "^2.4.0",
     "@types/jsonwebtoken": "^9.0.0",
+    "@types/nodemailer": "^7.0.1",
     "antd": "^5.0.0",
     "axios": "^1.6.0",
     "bcryptjs": "^2.4.3",
@@ -22,6 +23,7 @@
     "jsonwebtoken": "^9.0.0",
     "mysql2": "^3.14.4",
     "next": "^14.0.0",
+    "nodemailer": "^7.0.6",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "sass": "^1.92.0",
