--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "zique-assistant-platform",
   "version": "1.0.0",
-  "description": "紫鹊助手平台 - 基于 Next.js 的后台管理系统",
+  "description": "紫雀跨境运营平台",
   "private": true,
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
+    "dev": "dotenv -e .env.development -- next dev",
+    "build": "dotenv -e .env.production -- next build",
+    "start": "dotenv -e .env.production -- next start -p 3001",
     "lint": "next lint"
   },
   "dependencies": {
@@ -34,6 +34,7 @@
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
     "autoprefixer": "^10.4.21",
+    "dotenv-cli": "^10.0.0",
     "eslint": "^8.0.0",
     "eslint-config-next": "^14.0.0",
     "postcss": "^8.5.6",
