--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "zique-assistant-platform",
-  "version": "1.0.0",
+  "version": "0.0.1",
   "description": "紫雀跨境运营平台",
   "private": true,
   "scripts": {
     "dev": "dotenv -e .env.development -- next dev",
-    "build": "dotenv -e .env.production -- next build",
+    "build": "dotenv -e .env.production -- next build && node build.js",
     "start": "dotenv -e .env.production -- next start -p 3001",
     "lint": "next lint"
   },
@@ -16,6 +16,7 @@
     "@types/jsonwebtoken": "^9.0.0",
     "@types/nodemailer": "^7.0.1",
     "antd": "^5.0.0",
+    "archiver": "^7.0.1",
     "axios": "^1.6.0",
     "bcryptjs": "^2.4.3",
     "dayjs": "^1.11.18",
