--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "dotenv -e .env.development -- next dev",
     "build": "dotenv -e .env.production -- next build && node build.js",
     "start": "dotenv -e .env.production -- next start -p 3008",
-    "lint": "next lint"
+    "lint": "next lint",
+    "init-admin": "dotenv -e .env.development -- node scripts/init-admin.js"
   },
   "dependencies": {
     "@ant-design/icons": "^5.0.0",
