--- a/.env.example
+++ b/.env.example
@@ -12,8 +12,8 @@ DB_PORT=3306
 JWT_SECRET=your-jwt-secret-key
 
 # 应用配置
-NEXT_PUBLIC_APP_NAME=紫雀跨境运营平台
-NEXT_PUBLIC_APP_DESC=紫雀跨境运营平台
+NEXT_PUBLIC_APP_NAME=紫鹊跨境运营平台
+NEXT_PUBLIC_APP_DESC=紫鹊跨境运营平台
 NEXT_PUBLIC_API_URL=http://localhost:3000/api
 NEXT_PUBLIC_APP_URL=http://localhost:3000
 
